fix whitespace

--- a/materiale/quiz.css
+++ b/materiale/quiz.css
@@ -95,6 +95,7 @@ button {
     margin: 10px 0;
     width: 100%;
     box-sizing: border-box;
+    white-space: pre;
 }
 
 .code-inline {
